--- a/web/Database_Error.html
+++ b/web/Database_Error.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <title>Database_Error</title>
 </head>
-<body>
+<body style=" text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;">
+
+<div style="width: 100%;height: fit-content;display: flex;    justify-content: center;
+">
+    <img src="error_image.png" width="50px">
+</div>
+
     <div style="text-align: center">Database Unavailable</div><br>
     click <a href="sbi.jsp">here</a> to redirect to login page.
 </body>
